--- a/ConsoleTest/ConsoleTest.csproj
+++ b/ConsoleTest/ConsoleTest.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GameUtils\Utils.csproj" />
+    <ProjectReference Include="..\Utils\GameUtils.csproj" />
   </ItemGroup>
 
 </Project>
